<resources>
    <string name="app_name">Stock Picking</string>
    <string name="title_resume">Resumo</string>
    <string name="title_portfolio">Pertifólio</string>
    <string name="title_notifications">Alertas</string>
    <string name="title_account">Conta</string>
    <string name="cancel">Cancelar</string>
    <string name="title_save_stock">Cadastre uma empresa, Reit ou Fiis!</string>
    <string name="button_save_stock">Salvar</string>
    <string name="ticker">ticker(ex: ITSA4)</string>
    <string name="weight">peso</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_title_dialog">Digite as informações abaixo:</string>
    <string name="save">Salvar</string>
    <string name="text_empty_mensages">Você ainda não possui mensagens :(</string>
    <string name="empty_text_title">Você não tem nenhum ativo cadastrado</string>
    <string name="empty_text_description">Clique no botão +abaixo para começar.</string>
    <string name="empty_text_content_description">ícone de menu</string>
    <string name="quantity">quantidade</string>
    <string name="price">cotação</string>
    <string name="date">data(Ex: 10/01/2021</string>
    <string name="title_register">Cadastro de Ativo</string>

    <string name="msg_empty_fields">"Preencha todos os campos!"</string>

    <string name="msg_empty_field_ticker">"Preencha o campo ticker!"</string>
    <string name="msg_empty_field_quantity">"Preencha o campo quantidade!"</string>
    <string name="msg_empty_field_price">"Preencha o campo cotação!"</string>
    <string name="msg_empty_field_date">"Preencha o campo data!"</string>
    <string name="msg_empty_field_weight">"Deslize a barra para escolher um peso!"</string>
    <string name="zero">0</string>
    <string name="two">2</string>
    <string name="seven">7</string>
    <string name="five">5</string>
    <string name="ten">10</string>
    <string name="seekbar_title">Defina um peso de 0 à 10</string>

</resources>