<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_resume"
        android:icon="@drawable/ic_baseline_pie_chart_24"
        android:title="@string/title_resume" />

    <item
        android:id="@+id/navigation_portfolio"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/title_portfolio" />

    <item
        android:id="@+id/navigation_empty"
        android:title="" />

    <item
        android:id="@+id/navigation_alert"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/title_account" />

</menu>